--- a/NonHTTPProxy/pom.xml
+++ b/NonHTTPProxy/pom.xml
@@ -39,6 +39,11 @@
   </build>
 	  <dependencies>
 	  <dependency>
+	    <groupId>com.miglayout</groupId>
+    	<artifactId>miglayout-swing</artifactId>
+    	<version>5.0</version>
+	  </dependency>
+	  <dependency>
 	  <groupId>org.pcap4j</groupId>
 	  <artifactId>pcap4j-core</artifactId>
 	  <version>[1.0, 2.0)</version>
